revised 2nd time, completed first chapters

--- a/chap1.tex
+++ b/chap1.tex
@@ -9,7 +9,7 @@ Pole shifting theorem deals with linear differential systems and claims, that it
 \subsection{Systems of First Order Differential Equations}
 
 \begin{definition}
-	Let us have a system of linear differential equations of order of one with constant coefficients. Then a \termdef{matrix differential equation} for this system is in the form $$\dot{x}(t)=Ax(t)$$ 
+	Let us have a system of linear differential equations of order of one with constant coefficients. Then a \termdef{matrix differential equation} for this system is in the form $$\dot{x}(t)=Ax(t)$$ The matrix $A\in \C^{n\times n}$ is a \termdef{fundamental matrix} of the system.
 \end{definition}
 
 We will use this representation as it a very compact way of describing the system.
@@ -21,8 +21,8 @@ To express solution of this system in similarly compact matter we will establish
 	where $X^0$ is defined to be the identity matrix $I$ with the same dimensions as $X$.
 \end{definition}
 
-\begin{remark}
-\label{rem:expprop}
+\begin{lemma}
+\label{lem:expprop}
 	Let $A$, $B$ and $X$ be real or complex square matrices of same dimensions. Then 
 	\begin{enumerate}
 		\item $e^X$ converges for any matrix $X$.
@@ -31,7 +31,7 @@ To express solution of this system in similarly compact matter we will establish
 		\item $AB = BA \Rightarrow e^{A}B = Be^{A}$
 		\item If $R$ is invertible then $e^{R^{-1}XR}=R^{-1}e^AR$
 	\end{enumerate}
-\end{remark}
+\end{lemma}
 
 \begin{proof}
 	\begin{enumerate}
@@ -67,22 +67,41 @@ By using Remark \ref{rem:expprop}, we now for each Jordan block $J_{\lambda,n}$ 
 
 Now, since $y(0)$ is a constant vector, we see that $y(t)=e^{Jt}y(0)$ converges to 0 if all the eigenvalues of matrix $A$ are negative in their real parts.
 
-\subsection{Omg}
+\begin{example}
+	Consider higher order differential equation $$x^{(n)}(t)+a_1x^{(n-1)}(t)+\ldots+a_{n-1}x'(t)+a_nx(t)=0$$ this equation can also be expressed in a matrix form by choosing matrix $A$ as follows:
+	\begin{equation*}
+		A=
+		\begin{pmatrix}
+			0 & 1 & 0 & \ldots & 0 \\
+			0 & 0 & 1 & \ldots & 0 \\
+			\vdots & \vdots & \vdots & \ddots & \vdots \\
+			0 & 0 & 0 & \ldots & 1 \\
+			-a_n & -a_{n-1} & -a_{n-2} & \ldots & -a_1
+		\end{pmatrix}
+	\end{equation*}
+\end{example}
 
-The state of linear system can be represented by system of $n$ differential equations $$\dot{x}(t)=Ax(t)+Bu(t),$$ where $x(t)$ is the $n$-dimensional state vector $(\varphi(t),\dot{\varphi}(t),\ldots,\varphi^{(n-1)}(t))^T$, $u(t)$ is the $m$-dimensional \textit{input} or \textit{control vector}, $A \in \C ^{n\times n}$ is matrix of coefficients and $B\in \C ^{m\times n}$ is \textit{input} or \textit{control matrix}. The whole system is called \textit{n-dimensional system}. The control vector $u(t)$ is acquired from $x(t)$ by multiplying a control matrix $F\in \C ^{m\times n}$ by $x(t)$. All the possible states of $x(t)$ create \textbf{state space} which is usually equal to $\C^n$. 
+\subsection{Linear System With A Control}
 
-We can imagine this system as follows. The first part of the equation $\dot{x}(t)=Ax(t)$ can be thought of as the model of machine or event that we want to control and $Bu(t)$ as our control mechanism. The $B$ matrix is our ``control board'' and $u(t)$ is us deciding, which levers and buttons we want to push. Of course, if we want this system to be self-regulating, we cannot input our own values into $u(t)$ and therefore it has to be calculated from the current state of our system. Thus $u(t)=Fx(t)$. The whole system can then be rewritten as $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t).$$ If $A+BF$ is a diagonalizable matrix, then we have $$\Lambda=R^{-1}(A+BF)R,$$ where $R \in \C ^{n \times n}$ is an invertible matrix and $\Lambda \in \C ^{n \times n}$ is a diagonal matrix. We can write that $$\dot{x}(t)=RR^{-1}(A+BF)RR^{-1}x(t)=R\Lambda R^{-1}x(t),$$ it follows, that $$R^{-1}\dot{x}(t)=\dot{(R^{-1}x)}=\Lambda R^{-1}x(t).$$ By substituting $y(t)=R^{-1}x(t)$ we get $$\dot{y}(t)=\Lambda y(t).$$ This equation represents system of simple linear differential equations. If we denote elements on diagonal of $\Lambda$ by $\lambda_1,\lambda_2,\ldots,\lambda_n$ the resulting equations are  
-\begin{align*}
-  \dot{y}_1(t)&=\lambda_1y_1(t) \\
-  \dot{y}_2(t)&=\lambda_2y_2(t) \\
-  &\vdotswithin{=} \\
-  \dot{y}_n(t)&=\lambda_ny_n(t) 
-\end{align*}
-Solution to each of these equations is in the form 
-$$y_k(t)=y_k(0)e^{\lambda_kt}, k\in\{1,2,\ldots,n\}.$$
-Let $\lambda_k=a_k+b_ki$ where $a_k,b_k\in \R$, then 
-$$y_k(0)e^{\lambda_kt}=y_k(0)e^{a_kt}e^{b_kit}.$$ 
-We know, that $|e^{b_kit}|=1$ and that $y_k(0)$ is a constant, so the crucial part is $e^{a_kt}$. This converges to 0 if and only if $a_k$ is negative. Therefore we can stabilize our ``machine'' if we find such matrix $F \in \C^{n \times n}$ that $A+BF$ is diagonalizable with distinct eigenvalues (then we are sure that $A+BF$ is diagonalizable) with negative real part. This can be expressed through characteristic polynomial of matrix $A+BF$. We will denote characteristic polynomial of a matrix $A$ by $\chi_A$. Through our observations we got to a conclusion that we need to satisfy $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n),$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ are different from one another and their real parts are negative. This leads to an important definition.
+\begin{definition}
+	Let $m$, $n\in\N$. Linear differential system with \termdef{control} $u(t) \in \C^m$ is a system of linear differential equations in the form $$\dot{x}(t)=Ax(t)+Bu(t)$$ where $A\in\C^{n\times n}$ and $B\in\C^{n\times m}$ is a \termdef{control matrix}.
+\end{definition}
+
+In a general case, this is called an \termdef{open-loop control} system because the control is not dependent on previous state of the system.
+
+We can imagine this system as follows. The first part of the equation $\dot{x}(t)=Ax(t)$ can be thought of as the model of machine or event that we want to control and $Bu(t)$ as our control mechanism. The $B$ matrix is our ``control board'' and $u(t)$ is us deciding, which levers and buttons we want to push. 
+
+Of course, if we want this system to be self-regulating, we cannot input our own values into $u(t)$ and therefore it has to be calculated from the current state of our system.
+
+\begin{definition}
+	Let us have linear differential system with control $u(t)$ defined as follows $$u(t)=Fx(t)$$ where $F\in\C^{m\times n}$ is a \termdef{feedback matrix}. This system is then called a \termdef{closed-loop control} system or a \termdef{feedback control} system.
+\end{definition}
+
+Typically, we require a feedback control system to stabilize itself back into its stable state after some disturbances. This means that we require that the system converges to some set point. We can assume without loss of generality that this point is the origin of our state space i.e. all the possible states of $x(t)$. This can be achieved by transforming the system into different basis.
+
+The feedback control system can be simplified as follows $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t)$$ We now have an equation in a form that we already discussed in the first section and we know that it converges to $\nullvector$ if all of the eigenvalues of matrix $A+BF$ are negative in their real parts. 
+
+Therefore our ``machine'' can stabilize itself if we find such matrix $F \in \C^{n \times n}$ that $A+BF$ provides eigenvalues with negative real part. This requirement can be expressed through characteristic polynomial of matrix $A+BF$. We will denote characteristic polynomial of arbitrary matrix $A$ by $\chi_A$. Through our observations we got to a conclusion that we need to satisfy $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n),$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ have their real parts negative. This leads to an important definition.
 
 \begin{definition}
     Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We say that polynomial $\chi$ is \termdef{assignable} for the pair $(A,B)$ if there exists such matrix $F\in\K^{m \times n}$ that $$\chi_{A+BF}=\chi$$
@@ -96,17 +115,62 @@ In this section we will establish the notion of controllability. We will first e
 
 \subsection{Discrete-time systems}
 
-States that we can reach in set number of iterations in a \textit{discrete-time systems} can be derived as follows. From state $x_k$ and control vector $u_k$ is the next state $x_{k+1}$ computed by equation $$x_{k+1}=Ax_k+Bu_k$$ where $\K$ is a field, $A\in\K^{n\times n}$ and $B\in\K^{n\times m}$. The starting condition is $x_0=\textbf{o}$ and we can choose arbitrary $u_k$. Then, for $k=0$ we have $$x_1=Ax_0+Bu_0=Bu_0 \in \text{Im}B.$$ For $k=1$ we get $$x_2=Ax_1+Bu_1=ABu_0+Bu_1\in\text{Im}(AB|B).$$ It is clear, that $$x_k\in\text{Im}(A^{k-1}B|\ldots|AB|B).$$ We can observe that $\text{Im}(B|AB|\ldots|A^kB) \subseteq \text{Im}(B|AB|\ldots|A^{k+1}B)$. Then, from Cayley-Hamilton theorem we know that $$\text{Im}(B|AB|\ldots|A^{n-1}B)=\text{Im}(B|AB|\ldots|A^{n-1}B|A^nB).$$ Therefore all the states we could ever reach are already in space $$\text{Im}(B|AB|\ldots|A^{n-1}B).$$
+States that we can reach in set number of iterations in a open-loop control \textit{discrete-time systems} can be derived as follows. From state $x_k$ and control vector $u_k$ is the next state $x_{k+1}$ computed by equation $$x_{k+1}=Ax_k+Bu_k$$ where $\K$ is a field, $A\in\K^{n\times n}$ and $B\in\K^{n\times m}$. The starting condition is $x_0=\textbf{o}$ and we can choose arbitrary $u_k$. Then, for $k=0$ we have $$x_1=Ax_0+Bu_0=Bu_0 \in \text{Im}B.$$ For $k=1$ we get $$x_2=Ax_1+Bu_1=ABu_0+Bu_1\in\text{Im}(AB|B).$$ It is clear, that $$x_k\in\text{Im}(A^{k-1}B|\ldots|AB|B).$$ We can observe that $\text{Im}(B|AB|\ldots|A^kB) \subseteq \text{Im}(B|AB|\ldots|A^{k+1}B)$. From Cayley-Hamilton theorem we know that $A$ is a root of $\chi_A$. That means that $A^n$ can be expressed as linear combination of matrices $\{I,A,\ldots,A^{n-1}\}$ or equivalently that $A^nB$ can be expressed as linear combination of matrices $\{B,AB,\ldots,A^{n-1}B\}$. We now see that $$\text{Im}(B|AB|\ldots|A^{n-1}B)=\text{Im}(B|AB|\ldots|A^{n-1}B|A^nB).$$ Therefore all the states we could ever reach are already in space $$\text{Im}(B|AB|\ldots|A^{n-1}B)$$
 
 \begin{definition}
 	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We define \termdef{reachable space} $\mathcal{R}(A,B)$ as $\text{Im}(B|AB|\ldots|A^{n-1}B)$.
 \end{definition}
 
-\begin{definition}
-	Let $V$ be a vector space, $W$ be its subspace and $f$ be a mapping from $V$ to $V$. We call $W$ an invariant subspace of $f$ if $f(W)\subseteq W$. 
+We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$ we get the same subspace. This leads to an important property of some subspaces.
 
-	We also say that $W$ is $f$-invariant.
+\begin{definition}
+	Let $V$ be a vector space, $W$ be its subspace and $f$ be a mapping from $V$ to $V$. We call $W$ an \termdef{invariant subspace} of $f$ if $f(W)\subseteq W$. 
+
+	We also say that $W$ is \termdef{$f$-invariant}.
 \end{definition}
+
+\begin{remark}
+	$\mathcal{R}(A,B)$ is a $A$-invariant subspace.
+\end{remark} 
+
+The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to able to get the ``machine'' into any state in state space by controlling it with our control matrix $B$. Therefore we desire that $\mathcal{R}(A,B)=\K^n$. The equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
+
+\begin{definition}
+	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \termdef{controllable} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
+\end{definition}
+
+\subsection{Continuous-time systems}
+
+We will now show that the condition for \textit{discrete-time systems} is also characterizing for \textit{continuous-time systems}. For this we have to express solution of such system using matrices $A^iB$ for $i\in \N_0$. 
+
+We utilize matrix exponential in solving system of inhomogeneous linear system $\dot{x}(t)=Ax(t)+Bu(t)$. By left multiplying it by $e^{-tA}$ we get
+\begin{align*}
+	e^{-tA}\dot{x}(t)-e^{-tA}Ax(t) &=e^{-tA}Bu(t) \\
+	\frac{d}{dt} (e^{-tA}x(t)) &=e^{-tA}Bu(t) 
+\end{align*}
+Note, we used $-AA=A(-A)\Rightarrow e^{-tA}A=Ae^{-tA}$. After integrating both sides with respect to $t$ on interval $(t_0,t_1)$ we have 
+\begin{align*}
+	[e^{-tA}x(t)]^{t_1}_{t_0}&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
+	e^{-t_1A}x(t_1)-e^{-t_0A}x(t_0)&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
+	x(t_1)&=e^{(t_1-t_0)A}x(t_0)+\int^{t_1}_{t_0}e^{(t_1-t)A}Bu(t)dt
+\end{align*}
+
+Now it is clear that in system where $x(0)=\nullvector$ can every state in time $t\in \R^+$ be expressed as $$x(t)=\int^t_0 e^{(t-s)A}Bu(s)ds$$
+
+\begin{theorem}
+	The $n$-dimensional continuos-time linear system is controllable, meaning that $x(t)$ can be equal to any vector in $\K^n$, if and only if $\text{dim}\mathcal{R}(A,B)=n$.
+\end{theorem}
+
+\begin{proof}
+	From discussion above we have $$x(t)=\int^t_0e^{(t-s)A}Bu(s)ds=\int^t_0\sum^\infty_{k=0}\frac{(t-s)^k}{k!}A^kBu(s)$$ 
+	We can see that $$x(t) \in \text{Im}(B|AB|\ldots|A^kB|\ldots)\subseteq \text{Im}(B|AB|\ldots|A^{n-1}B)=\mathcal{R}(A,B)$$ 
+	
+	If the system is controllable then $x(t)$ can be equal to any of the vectors of an arbitrary basis of $\K^n$. Therefore we know that $n$ linearly independent vectors belong into $\mathcal{R}(A,B)$ and naturally it follows $\text{dim}\mathcal{R}(A,B)=n$.
+
+	Conversely, if dimension of reachable space is less than $n$, then any basis vector of complement space to $\mathcal{R}(A,B)$ cannot be equal to $x(t)$. Therefore the system is not controllable.
+\end{proof}
+
+\subsection{Decomposition theorem}
 
 \begin{lemma}
 	\label{lem:invmatrix}
@@ -124,72 +188,6 @@ States that we can reach in set number of iterations in a \textit{discrete-time 
 \begin{proof}
 	We have $$[f]^C_C=[\text{id}]^K_C [f]^K_K [\text{id}]^C_K=([\text{id}]^C_K)^{-1} [f]^K_K [\text{id}]^C_K$$ where $[id]^C_K$ is a transition matrix from basis $C$ to canonical basis $K$. Let $(w_1,\ldots,w_r)$ be an arbitrary basis of subspace $W$. We complete this sequence into basis of $V$ with vectors $v_1,\ldots,v_{n-r}$ where $n=\text{dim}V$. We now put $$C=(w_1,\ldots,w_r,v_1,\ldots,v_{n-r})$$ Since $W$ is $f$-invariant we know that $[f]^K_K [\text{id}]^C_K = (u_1,\ldots,u_r,z_1,\ldots,z_{n-r})$, where $u_i\in W$ and $z_i\in V$. Now, by left multiplying this result by $[\text{id}]^K_C$ we get the matrix $([u_1]_C,\ldots,[u_r]_C,[z_1]_C,\ldots,[z_{n-r}]_C)$. Thanks to our choice of basis $C$ can any vector $u_i$ be expressed as a linear combination of vectors $(w_1,\ldots,w_r)$ and therefore we now have the desired form.
 \end{proof}
-
-From discussion above it is clear that for arbitrary $v\in\mathcal{R}(A,B)$ we have $Av\in\mathcal{R}(A,B)$. This property is called $A$-\textit{invariance}.
-
-The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to able to get the ``machine'' into any state in state space by controlling it with our control matrix $B$. Therefore we desire that $\mathcal{R}(A,B)=\K^n$. The equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
-
-\begin{definition}
-	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \termdef{controllable} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
-\end{definition}
-
-\subsection{Continuous-time systems}
-
-We will now show that the condition for \textit{discrete-time systems} is also characterizing for \textit{continuous-time systems}. For this we have to express solution of such system using matrices $A^iB$ for $i\in \N_0$. 
-
-\begin{definition}
-	Let $X$ be real or complex square matrix. The exponential of $X$, denoted by $e^X$, is the square matrix of same dimensions given by the power series $$e^{X}=\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$$
-	where $X^0$ is defined to be the identity matrix $I$ with the same dimensions as $X$.
-\end{definition}
-
-We will need few properties of this notion which we will form in the next claim. 
-
-\begin{remark}
-	Let $A$, $B$ and $X$ be real or complex square matrices of same dimensions. Then 
-	\begin{enumerate}
-		\item $e^X$ converges for any matrix $X$.
-		\item $\frac{d}{dt}e^{Xt}=Xe^{Xt}$, for $t \in \R$
-		\item $AB = BA \Rightarrow e^{At}B = Be^{At}$, for $t \in \R$
-	\end{enumerate}
-\end{remark}
-
-\begin{proof}
-	\begin{enumerate}
-		\item We want to show that the partial sums $S_N=\sum^N_{k=0}\frac{1}{k!}X^k$ converge to $e^X$. This can be shown by choosing any matrix norm satisfying $||AB||<||A||\cdot||B||$ and writing $$||e^X-S_N||=||\sum^\infty_{k=N+1}\frac{1}{k!}X^k||=\sum^\infty_{k=N+1}\frac{1}{k!}||X||^k$$ where right side approaches zero since $\sum^\infty_{k=0}\frac{||A||^k}{k!}$ converges.
-
-		\item Thanks to the convergence we have $$\frac{d}{dt}e^{Xt}=\frac{d}{dt}\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k+1}=X\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=Xe^{Xt}$$
-
-		\item From definition follows $$e^{At}B=\sum^\infty_{k=0}\frac{t^k}{k!}A^{k}B\stackrel{AB=BA}{=}\sum^\infty_{k=0}\frac{t^k}{k!}BA^{k}=B\sum^\infty_{k=0}\frac{t^k}{k!}A^{k}=Be^{At}$$ 
-	\end{enumerate}
-\end{proof}
-
-Now we utilize matrix exponential in solving system of inhomogeneous linear system $\dot{x}(t)=Ax(t)+Bu(t)$. By left multiplying it by $e^{-tA}$ we get
-\begin{align*}
-	e^{-tA}\dot{x}(t)-e^{-tA}Ax(t) &=e^{-tA}Bu(t) \\
-	\frac{d}{dt} (e^{-tA}x(t)) &=e^{-tA}Bu(t) 
-\end{align*}
-Note we used $-AA=A(-A)\Rightarrow e^{-tA}A=Ae^{-tA}$. After integrating both sides with respect to $t$ on interval $(t_0,t_1)$ we have 
-\begin{align*}
-	[e^{-tA}x(t)]^{t_1}_{t_0}&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
-	e^{-t_1A}x(t_1)-e^{-t_0A}x(t_0)&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
-	x(t_1)&=e^{(t_1-t_0)A}x(t_0)+\int^{t_1}_{t_0}e^{(t_1-t)A}Bu(t)dt
-\end{align*}
-
-Now it is clear that in system where $x(0)=\nullvector$ can every state in time $t\in \R^+$ be expressed as $$x(t)=\int^t_0 e^{(t-s)A}Bu(s)ds$$
-
-\begin{theorem}
-	The $n$-dimensional continuos-time linear system is controllable if and only if $\text{dim}\mathcal{R}(A,B)=n$.
-\end{theorem}
-
-\begin{proof}
-	From discussion above we have $$x(t)=\int^t_0e^{(t-s)A}Bu(s)ds=\int^t_0\sum^\infty_{k=0}\frac{(t-s)^k}{k!}A^kBu(s)$$ we can see that $$x(t) \in \text{Im}(B|AB|\ldots|A^kB|\ldots)\subseteq \text{Im}(B|AB|\ldots|A^{n-1}B)=\mathcal{R}(A,B)$$ 
-	
-	If the system is controllable then $x(t)$ can be equal to any of the vectors of an arbitrary basis of $\K^n$. Therefore we know that $n$ linearly independent vectors belong into $\mathcal{R}(A,B)$ and naturally it follows $\text{dim}\mathcal{R}(A,B)=n$.
-
-	Conversely, if dimension of reachable space is less than $n$, then any basis vector of complement space to $\mathcal{R}(A,B)$ cannot be equal to $x(t)$. Therefore the system is not controllable.
-\end{proof}
-
-\subsection{Decomposition theorem}
 
 If $(A,B)$ are not controllable then there exists subspace of our state space that is not affected by our input. This can be shown using following theorem.
 
@@ -213,15 +211,15 @@ If $(A,B)$ are not controllable then there exists subspace of our state space th
 \end{theorem}
 
 \begin{proof}
-	Let $\mathcal{S}$ be any subspace that $$\mathcal{R}(A,B)\oplus\mathcal{S}=\K^n.$$ Let $\{v_1,\ldots,v_r\}$ be the basis of $\mathcal{R}(A,B)$ and $\{w_1,\ldots,w_{n-r}\}$ be the basis of $\mathcal{S}$, then we put $K=(v_1,\ldots,v_r,w_1,\ldots,w_{n-r})$ as the basis of $\K^n$ and we put $$T:=(v_1|\ldots|v_r|w_1|\ldots|w_{n-r})=[\text{id}]^K_C$$ where $C$ is the canonical basis and $[\text{id}]^K_C$ is the transition matrix from basis $K$ to basis $C$. We have $\text{Im}T=\K^n$ therefore $T$ is an invertible matrix. It holds $$\widetilde{B}=T^{-1}B=([\text{id}]^K_C)^{-1}B=[\text{id}]^C_KB$$ We know that $\text{Im}B\subseteq\mathcal{R}(A,B)$ therefore every column of matrix $B$ can be uniquely expressed as linear combination of vectors in basis $K$. From our choice of $T$ we can clearly see that $\widetilde{B}$ will be of the desired form.
+	Let $\mathcal{S}$ be any subspace that $$\mathcal{R}(A,B)\oplus\mathcal{S}=\K^n.$$ Let $\{v_1,\ldots,v_r\}$ be the basis of $\mathcal{R}(A,B)$ and $\{w_1,\ldots,w_{n-r}\}$ be the basis of $\mathcal{S}$, then we put $K=(v_1,\ldots,v_r,w_1,\ldots,w_{n-r})$ as the basis of $\K^n$ and we put $$T:=(v_1|\ldots|v_r|w_1|\ldots|w_{n-r})=[\text{id}]^K_C$$ where $C$ is the canonical basis and $[\text{id}]^K_C$ is the transition matrix from basis $K$ to basis $C$. We have $\text{Im}T=\K^n$ therefore $T$ is an invertible matrix. It holds $$\widetilde{B}=T^{-1}B=([\text{id}]^K_C)^{-1}B=[\text{id}]^C_KB$$ We know that $\text{Im}B\subseteq\mathcal{R}(A,B)$ therefore every column of matrix $B$ can be uniquely expressed as linear combination of vectors in basis $K$. From our choice of $T$ we see that $\widetilde{B}$ is of the desired form.
 	
 	As for $\widetilde{A}$ we have $$\widetilde{A}=T^{-1}AT=[\text{id}]^C_KA[\text{id}]^K_C$$ From the fact that $\mathcal{R}(A,B)$ is $A$-invariant it follows that $$AT=(u_1|\ldots|u_r|z_1|\ldots|z_{n-r})$$ where $u_i \in \mathcal{R}(A,B)$ and $z_i \in \K^i$. Therefore, when we express these vectors in the basis $K$ (by left multiplying $AT$ by $T^{-1}=[\text{id}]^C_K$) we get the required structure of matrix $\widetilde{A}$.
 \end{proof}
 
-We achieved the new form of matrices $A$ and $B$ by changing the basis of our state space. We define relation between $(A,B)$ and $(\widetilde{A},\widetilde{B}).$
+We achieved the new form of matrices $A$ and $B$ by changing the basis of our state space. We now define the relation between $(A,B)$ and $(\widetilde{A},\widetilde{B}).$
 
 \begin{definition}
-	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as above. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $$(A,B) \sim (\widetilde{A},\widetilde{B})$$ if there exists invertible matrix $T$ for which it holds that $$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B$$
+	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as in Theorem \ref{theorem:decomp} above. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $$(A,B) \sim (\widetilde{A},\widetilde{B})$$ if there exists invertible matrix $T$ for which it holds that $$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B$$
 \end{definition}
 
 We can interpret the decomposition as follows. Consider our system $\dot{x}(t)=Ax(t)+Bu(t)$. By changing the basis by putting $x(t)=Ty(t)$ we get $$T\dot{y}(t)=ATy(t)+Bu(t)$$ which we can write as $$\dot{y}(t)=T^{-1}ATy(t)+T^{-1}Bu(t)=\widetilde{A}y(t)+\widetilde{B}u(T)$$ Which gives us 
@@ -229,7 +227,7 @@ We can interpret the decomposition as follows. Consider our system $\dot{x}(t)=A
 	\dot{y}_1(t)&=A_1y_1(t)+&A_2y_2(t)&+B_1u_1(t) \\
 	\dot{y}_2(t)&=&A_3y_2(t)&
 \end{alignat*}
-where $y_1(t)$ is the first $r$ elements of $y(t)$, $y_2(t)$ is the other $n-r$ elements of $y(t)$ and $u_1(t)$ is the first $r$ elements of $u(t)$. It is clear that we cannot control $\dot{y}_2$ by any means. 
+where $y_1(t)$ is composed of the first $r$ elements of $y(t)$, $y_2(t)$ is composed of the other $n-r$ elements of $y(t)$ and $u_1(t)$ is composed of the first $r$ elements of $u(t)$. Since $\dot{y}_2(t)$ does not depend on control vector we cannot change these last $n-r$ coordinates of $y(t)$.
 
 It is also true that $(A_1,B_1)$ is a controllable pair which we will state in a lemma.
 
@@ -317,3 +315,23 @@ therefore it holds $$\chi_A=\chi_{A_1}\chi_{A_3}$$
 \begin{definition}
 	The characteristic polynomial of matrix $A$ splits into \termdef{controllable} and \termdef{uncontrollable parts} with respect to pair $(A,B)$ which we denote by $\chi_c$ and $\chi_u$ respectively. We define these polynomials as $$\chi_c=\chi_{A_1} \qquad \chi_u=\chi_{A_3}$$ In case $r=0$ we put $\chi_c=1$ and in case $r=n$ we put $\chi_u=1$.
 \end{definition}
+
+For this definition to be correct we need to show that polynomials $\chi_{A_1}$ and $\chi_{A_3}$ are not dependent on the choice of basis on $\mathcal{R}(A,B)$. Since $\chi_{A_3}=\chi_A/\chi_{A_1}$, it is enough to show that matrix $A_1$ is independent of the choice.
+
+\begin{lemma}
+	$\chi_c$ is independent of the choice of basis on $\mathcal{R}(A,B)$.
+\end{lemma}
+
+\begin{proof}
+	From definition we have $\chi_c=\chi_{A_1}$ where $A_1$ is some matrix for a specific decomposition of matrix $A$ thanks to basis $C$ used in a proof of Theorem \ref{theorem:decomp}. Consider different basis $D$ which suffices the conditions from the said proof. We denote the $r \times r$ matrix in the top left corner of the resulting matrix by $X_1$. 
+
+	Suppose $\chi_{X_1}\neq \chi_{A_1}$. Then we can write 
+	\begin{align*}
+		\chi_{X_1}&\neq\text{det}(sI-X_1)=\text{det}(sI-T^{-1}AT) \\
+		&=\text{det}(sT^{-1}IT-T^{-1}AT)=\text{det}(T^{-1}(sI-A)T) \\
+		&=(\text{det}T)^{-1}\text{det}(sI-A)\text{det}T=\text{det}(sI-A) \\
+		&=\chi_A
+	\end{align*}
+
+	TODO plánujem tie matice X1 a A1 rozšíriť nulami na veľkosť n x n a potom ich charakteristicke polynomy prenasobit determinantom prechodnej matice medzi C a D a takisto inverznou hodnotou tohoto determinantu z coho ziskam nakoniec ze chiX1 sa nerovna chiX1 co je spor
+\end{proof}
