--- a/macros.tex
+++ b/macros.tex
@@ -20,5 +20,6 @@
 \newtheorem{claim}{Claim}[]
 \newtheorem*{definition}{Definition}
 \newtheorem{remark}{Remark}
+\newtheorem{example}{Example}
 
 \newcommand{\bigO}{\mathcal{O}}
